feat: db population end points finished
