# src/swagger.yml
@@ -6,30 +6,6 @@ info:
 servers:
   - url: http://localhost:3000
 paths:
-  /github/data:
-    get:
-      summary: Obtener datos de GitHub
-      responses:
-        '200':
-          description: Respuesta exitosa
-        '500':
-          description: Error interno del servidor
-  /module1/data:
-    get:
-      summary: Obtener datos del módulo 1
-      responses:
-        '200':
-          description: Respuesta exitosa
-        '500':
-          description: Error interno del servidor
-  /module2/data:
-    get:
-      summary: Obtener datos del módulo 2
-      responses:
-        '200':
-          description: Respuesta exitosa
-        '500':
-          description: Error interno del servidor
   /user:
     post:
       summary: Crear un usuario
@@ -45,6 +21,82 @@ paths:
       responses:
         '200':
           description: Usuario creado exitosamente
+        '400':
+          description: Solicitud incorrecta
+        '500':
+          description: Error interno del servidor
+  /user/followers/following:
+    post:
+      summary: Crear repositorios del usuario
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+      responses:
+        '200':
+          description: Repositorios creados exitosamente
+        '400':
+          description: Solicitud incorrecta
+        '500':
+          description: Error interno del servidor
+  /repositories:
+    post:
+      summary: Crear repositorios del usuario
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+      responses:
+        '200':
+          description: Repositorios creados exitosamente
+        '400':
+          description: Solicitud incorrecta
+        '500':
+          description: Error interno del servidor
+  /repositories/collaborators:
+    post:
+      summary: Crear repositorios del usuario
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+      responses:
+        '200':
+          description: Repositorios creados exitosamente
+        '400':
+          description: Solicitud incorrecta
+        '500':
+          description: Error interno del servidor
+  /repositories/issues/assignees:
+    post:
+      summary: Crear repositorios del usuario
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+      responses:
+        '200':
+          description: Repositorios creados exitosamente
         '400':
           description: Solicitud incorrecta
         '500':
